fixing problems on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,7 @@ body {
     padding:0;
 	
     background-color: #D4D4D4;
-	
-   /* font-family: 'Merriweather Sans', sans-serif; */
+
     font-weight: 400;
 	line-height:1.2;
 
@@ -38,12 +37,16 @@ body {
 	-webkit-border-radius: 5px;
 	border: 1px solid rgba(0,0,0,0.3);
 	border-bottom-width: 3px;
+	-webkit-appearance: none;
 	
 }
 #popdiv {
 	display:none;	
 }
 
+#starry {
+	font-size:300%;	
+}
 
 #searchinp {
 	width:90%;
@@ -135,18 +138,6 @@ a:hover {
 	
 	}
 
-.thumb {
-  
- 
-  vertical-align: middle; 
-  text-align: center;
-	}
-
-.crimetape {
-    
- margin-right: 35px;
-  margin-left: -5px;
-	}
 /* ============= HEADER STYLES ============= */
 .header {
     margin:0px;
@@ -240,7 +231,7 @@ text-align: left;
 }
 
 .content p{
-         font-size: 10pt;
+    font-size: 10pt;
 	font-family: 'Merriweather Sans', sans-serif;
     font-weight: 300;
 	line-height:135%;
@@ -253,16 +244,14 @@ text-align: left;
 }
 
 #rinfo{
-         font-size: 10pt;
+    font-size: 100%;
 	font-family: 'Merriweather Sans', sans-serif;
     font-weight: 300;
 	line-height:135%;
     text-align:left;  
-	padding-left: 15px;
-	margin-bottom: 12%;
 	letter-spacing: 3px;
-
-	margin-left: 10px;
+	width:90%;
+	
 }
 .content h4 {
     text-align:center;   
@@ -660,7 +649,7 @@ background-color: white;
 .buttons {
     background-color:#27A5A1;
     color:#ffffff;
-   
+   -webkit-appearance: none;
     float:left;
     text-transform: uppercase;
     width:80%;
@@ -718,6 +707,7 @@ background-color: white;
   border: 1px solid rgba(0,0,0,0.3);
   border-bottom-width: 5px;
   color: #FFF;
+  -webkit-appearance: none;
   
 
 }
